# NeuroEdge-Device

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: architect.md  build-error-resolver.md  chief-of-staff.md  code-architect.md  code-explorer.md  code-reviewer.md  code-simplifier.md  cpp-build-resolver.md  cpp-reviewer.md  csharp-reviewer.md  dart-build-resolver.md  database-reviewer.md  doc-updater.md  docs-lookup.md  e2e-runner.md  epic-writer.md  flutter-reviewer.md  gan-evaluator.md  gan-generator.md  gan-planner.md  go-build-resolver.md  go-reviewer.md  harness-optimizer.md  healthcare-reviewer.md  java-build-resolver.md  java-reviewer.md  kotlin-build-resolver.md  kotlin-reviewer.md  loop-operator.md  performance-optimizer.md  planner.md  pr-test-analyzer.md  python-reviewer.md  pytorch-build-resolver.md  refactor-cleaner.md  researcher.md  rust-build-resolver.md  rust-reviewer.md  security-reviewer.md  seo-specialist.md  (+5 more)
.claude/commands/: gan-build.md  learn-eval.md  model-route.md  prd-to-epics.md  prp-commit.md  prp-implement.md  prp-plan.md  prp-pr.md  prp-prd.md  quality-gate.md  research.md  santa-loop.md  stories-to-tasks.md  test-coverage.md
docs/: PRD.md  epics-and-user-stories.md
docs/plans/: phase-0-bootstrap.plan.md  phase-1-data-plane-skeleton.plan.md
docs/project_related/: PRD.md  epics-and-user-stories.md  task-board.md
docs/reference/: device_edge_pipeline.md  device_system_design_approach.md
health_check/: cli.py
health_check/checkers/: agents.py  base.py  hooks.py  skills.py
scripts/hooks/: post-edit-console-warn.js  post-edit-py-lint.js  post-edit-ts-accumulate.js  pre-commit-quality.js  stop-typecheck.js
src/neuroedge_device/: __init__.py
