[project]
name = "neuroedge-device"
version = "0.1.0"
description = "Cloud-agnostic Edge AI runtime — containerised inference stack for Jetson, Qualcomm AIM-01, RPi 5, and x86"
authors = [{ name = "Sanjeev Kumar", email = "sanjeev.kumar@cognizant.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# ─────────────────────────────────────────────────────────────────────────────
# Core — shared across ALL Python containers (ne-control-plane, ne-external,
# ne-security). Keep this minimal; container-specific deps go in extras below.
# ─────────────────────────────────────────────────────────────────────────────
dependencies = [
    # Shared data contracts from NeuroEdge Web (UseCase, ModelArtifact, PipelineStatus)
    # FR-9b-1, FR-9c-1, US-02-01
    "neuroedge-contracts @ git+https://github.com/sanjkcog/NeuroEdge-Web.git@main#subdirectory=src/neuroedge_design_usecase",

    # Validation and schema enforcement for UseCase / ModelArtifact payloads
    "jsonschema>=4.22.0",
    "pydantic>=2.7.0",

    # MQTT client — EMQX inter-container bus (FR-9b-2, FR-9c-3, FR-9d-3)
    "paho-mqtt>=2.1.0",

    # Structured JSON logging → journald + OTLP export (FR-9b-6)
    "structlog>=24.2.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Optional extras — install per container
#   uv sync --extra control-plane
#   uv sync --extra external
#   uv sync --extra all
# ─────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]

# ne-control-plane: FastAPI REST API, SQLite metadata, rule engine, scheduler,
# metrics exporter, drift detection, container management (FR-9b-*, FR-9e-*)
control-plane = [
    # REST API: /start /stop /reconfigure /healthz /metrics (FR-9b-1, US-03-02)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Idempotent config push to data-plane via MQTT (FR-9b-2)
    # (paho-mqtt is in core)

    # SQLite metadata persistence — survives container restart (FR-9b-3)
    "sqlalchemy>=2.0.35",

    # YAML-defined rule engine for post-inference alerting (FR-9b-4, US-03-04)
    "business-rules>=1.0.1",

    # Periodic tasks: health pings, metric flush, log rotation (FR-9b-5)
    "apscheduler>=3.10.4",

    # OTLP structured log export (FR-9b-6)
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",

    # Custom Prometheus metrics: inference FPS, latency p50/p95/p99 (FR-9e-1, US-07-05)
    "prometheus-client>=0.21.0",

    # Container management endpoints via docker-py with audit log (FR-9e-5)
    "docker>=7.1.0",
]

# ne-external: local UI (FastAPI+HTMX+SSE), Cloud Agent (AWS IoT/S3),
# OTA Agent (SSH+Docker-compose + Mender), JSON/XML emitter (FR-9d-*)
external = [
    # Local UI: HTTPS :8443, HTMX SSE fragments (FR-9d-2, US-03-03)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",

    # Server-sent events for dashboard tiles (FR-9d-2)
    "sse-starlette>=2.1.0",

    # Cloud Agent → AWS IoT Core (MQTT) + S3 bulk artifacts (FR-9d-3, US-04-03)
    "boto3>=1.35.0",

    # OTA Agent: SshDockerComposeTarget (FR-9d-4, US-06-02)
    "paramiko>=3.5.0",

    # OTA Agent: cryptography for TLS cert handling and cosign verify subprocess
    "cryptography>=43.0.0",
]

# ne-security: cert management, SBOM/scan tooling (FR-9f-*)
# Note: cosign, syft, grype, trivy, Wazuh are binaries — not Python packages.
# This extra covers Python helpers that call them.
security = [
    # TLS/PKI — mTLS cert generation for EMQX (FR-9f-2)
    "cryptography>=43.0.0",

    # AWS KMS for cosign key management (FR-9f-7, US-07-03)
    "boto3>=1.35.0",
]

# Hardware inference backends — import-time optional; selected by BackendFactory
# FR-9c-2: OnnxRuntimeBackend (MVP), TensorRTBackend (v1), QnnBackend (v1),
#          OpenVINOBackend (v2)
hardware = [
    # CPU ONNX Runtime — universal fallback backend (FR-9c-2 MVP, US-02-03)
    "onnxruntime>=1.19.0",

    # Qualcomm AI Hub — QNN compilation + AIM-01 deployment (FR-9c-2 v1, US-06-04)
    "qai-hub>=0.18.0",

    # Intel OpenVINO — CPU/iGPU/VPU backend (FR-9c-2 v2, US-09-01)
    "openvino>=2024.4.0",

    # RealSense D4xx Python bindings (FR-9a-2, US-05-03)
    "pyrealsense2>=2.55.0",
]

# Phase 7 (v1) — drift detection: KS-stat on feature distributions (FR-9e-2, US-07-06)
# Install on device only: uv sync --extra analytics
# scipy requires numpy; no Python 3.14 wheels available — installs from sdist on 3.14
analytics = [
    "scipy>=1.13.0",
]

# All Python service dependencies — for local dev and CI
# Hardware SDKs (pyrealsense2, qai-hub, openvino, onnxruntime) excluded:
# they are platform-locked and installed only on target devices.
# Use: uv sync --extra all
all = [
    "neuroedge-device[control-plane]",
    "neuroedge-device[external]",
    "neuroedge-device[security]",
]

# ─────────────────────────────────────────────────────────────────────────────
# Dev / test / lint — never shipped in container images
# ─────────────────────────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",          # FastAPI TestClient async support

    # Linting, formatting, type checking
    "ruff>=0.7.0",
    "mypy>=1.11.0",

    # Stub packages for mypy
    "types-jsonschema>=4.23.0",
    "boto3-stubs[iot,iot-data,s3,cloudwatch]>=1.35.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Build system
# ─────────────────────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true   # required for neuroedge-contracts git+ dependency

[tool.hatch.build.targets.wheel]
packages = ["src/neuroedge_device"]

# ─────────────────────────────────────────────────────────────────────────────
# Tool config
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=services --cov-report=term-missing --cov-fail-under=80"

[tool.uv]
# Hardware extras (pyrealsense2, qai-hub, openvino) are platform-locked.
# Install only on the target device: uv sync --extra hardware
